Progress Test Updated

--- a/ProgressTest2/SQLite/app/src/main/res/layout/activity_update_product.xml
+++ b/ProgressTest2/SQLite/app/src/main/res/layout/activity_update_product.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".UpdateProduct">
 
     <EditText
         android:layout_width="match_parent"
@@ -32,18 +31,18 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/idBtnAddProduct"
+        android:id="@+id/idBtnUpdateProduct"
         android:layout_margin="10dp"
-        android:text="Add Product"
+        android:text="Update Product"
         android:textAllCaps="false"
         android:backgroundTint="@color/buttonColor"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/idBtnReadProducts"
+        android:id="@+id/idBtnDeleteProduct"
         android:layout_margin="10dp"
-        android:text="View All Products"
+        android:text="Delete Product"
         android:textAllCaps="false"
         android:backgroundTint="@color/buttonColor"/>
 
